2010-10-24  Robert Larice
 * src/frontend/com_sysinfo.c ,
 * src/frontend/plotting/graf.c ,
 * src/misc/util.c ,
 * src/spicelib/devices/cpl/cplsetup.c ,
 * src/spicelib/devices/soi3/soi3ask.c ,
 * src/spicelib/devices/txl/txlsetup.c ,
 * src/tclspice.c ,
 * src/xspice/evt/evtinit.c ,
 * src/xspice/evt/evtload.c ,
 * src/xspice/icm/xtraevt/int/udnfunc.c ,
 * src/xspice/icm/xtraevt/real/udnfunc.c ,
 * src/xspice/idn/idndig.c :
  cast the tmalloc, MALLOC, return value

2010-10-24  Robert Larice
 * src/misc/wlist.c ,
 * src/spicelib/devices/bsim3/b3set.c ,
 * src/spicelib/devices/bsim3soi/b4soiset.c ,
 * src/spicelib/devices/bsim4/b4set.c :
  fix incorrect usage of tmalloc/sizeof, incorrect indirection level

2010-10-24  Robert Larice
 * src/frontend/com_ahelp.c ,
 * src/frontend/com_display.c ,
 * src/frontend/com_help.c ,
 * src/frontend/help/readhelp.c ,
 * src/frontend/variable.c ,
 * src/frontend/vectors.c ,
 * src/misc/wlist.c :
  qsort() usage, drop cast of the first argument (which is a void *)

2010-10-24  Robert Larice
 * src/maths/sparse/spalloc.c ,
 * src/maths/sparse/spbuild.c ,
 * src/maths/sparse/spdefs.h ,
 * src/maths/sparse/spfactor.c ,
 * src/maths/sparse/spoutput.c ,
 * src/maths/sparse/sputils.c :
  rename ALLOC, REALLOC, CALLOC, FREE, in the "src/maths/sparse" domain
    -> SP_MALLOC, SP_REALLOC, SP_CALLOC, SP_FREE

2010-10-24  Robert Larice
 * src/include/complex.h :
  ngcomplex_t instead of complex, #2/2
    rename the structure as well

2010-10-24  Robert Larice
 * src/frontend/com_compose.c ,
 * src/frontend/com_fft.c ,
 * src/frontend/com_let.c ,
 * src/frontend/define.c ,
 * src/frontend/diff.c ,
 * src/frontend/evaluate.c ,
 * src/frontend/outitf.c ,
 * src/frontend/plotting/plotit.c ,
 * src/frontend/postcoms.c ,
 * src/frontend/rawfile.c ,
 * src/frontend/spec.c ,
 * src/frontend/vectors.c ,
 * src/include/complex.h ,
 * src/include/dvec.h ,
 * src/maths/cmaths/cmath.h ,
 * src/maths/cmaths/cmath1.c ,
 * src/maths/cmaths/cmath2.c ,